@@ -1,5 +1,8 @@
 2004-10-01  Ulrich Drepper  <drepper@redhat.com>
 
+	* sysdeps/unix/sysv/linux/x86_64/lowlevellock.S
+	(__lll_mutex_timedlock_wait): Address futex correctly.
+
 	* sysdeps/unix/sysv/linux/i386/i486/lowlevellock.S
 	(__lll_mutex_timedlock_wait): I woken but cannot get the lock,
 	make sure 2 is stored in the futex and we looked at the old value.
